# llm-chain

crates/llm-chain-local/: Cargo.toml
crates/llm-chain-local/src/: executor.rs
crates/llm-chain-mock/: Cargo.toml
crates/llm-chain-mock/src/: executor.rs
crates/llm-chain-qdrant/src/: lib.rs
